reading all data from sqlite file

--- a/views/error.jade
+++ b/views/error.jade
@@ -3,4 +3,4 @@ extends layout
 block content
   h1= message
   h2= error.status
-  pre #{error.stack}
+  p= {"code":404,"status":"Not Found","data":"Invalid endpoint or resource."}
